pest/src/snapshots/pest__error__tests__display_custom_pos.snap
---
source: pest/src/error.rs
expression: error
---
 --> 2:2
  |
2 | cd
  |  ^---
  |
  = error: big one
