pest/src/snapshots/pest__error__tests__display_custom_span_end_after_newline.snap
---
source: pest/src/error.rs
expression: error
---
 --> 1:1
  |
1 | abcdef␊
  | ^-----^
  |
  = error: big one
