pest/src/snapshots/pest__error__tests__display_custom_span_two_lines.snap
---
source: pest/src/error.rs
expression: error
---
 --> 2:2
  |
2 | cd
3 | efgh
  |  ^^
  |
  = error: big one
