pest/src/snapshots/pest__error__tests__display_custom_span_two_lines_inverted_cols.snap
---
source: pest/src/error.rs
expression: error
---
 --> 1:6
  |
1 | abcdef
2 | gh
  | ^----^
  |
  = error: big one
